[package]
name = "blind-threshold-bls-neon"
version = "0.1.0"
authors = ["Kobi Gurkan <kobi@clabs.co>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "blind_threshold_bls_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8.0"
threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", package = "threshold-bls" }
rand_core = { version = "0.5.1", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }
serde = { version = "1.0.106", default-features =  false }
bincode = { version = "1.2.1", default-features = false }
anyhow = "1.0"
